@@ -3320,6 +3320,7 @@ when "69.1.1"
 #  f = fairy.input(["sample/wc/data/sample_30M.txt"]*120)
   f = fairy.input(["sample/wc/data/sample_30M.txt"]*10)
 #  f = fairy.input(["sample/wc/data/sample_10M.txt"]*10)
+#  f = fairy.input(["sample/wc/data/fairy.cat"]*240)
   f = f.mapf(%{|ln| begin
                       ln.chomp.split
 		    rescue
@@ -3345,8 +3346,9 @@ when "69.1.1.1"
 
 when "69.1.2"
 #  f = fairy.input(["sample/wc/data/sample_30M.txt"]*120)
-  f = fairy.input(["sample/wc/data/sample_30M.txt"]*10)
-#  f = fairy.input(["sample/wc/data/sample_10M.txt"]*10)
+#  f = fairy.input(["sample/wc/data/sample_30M.txt"]*10)
+#  f = fairy.input(["sample/wc/data/sample_10M.txt"]*30)
+  f = fairy.input(["sample/wc/data/fairy.cat"]*240)
   f = f.mapf(%{|ln| begin
                       ln.chomp.split
 		    rescue
@@ -3374,7 +3376,8 @@ when "69.2.0"
 when "69.2.1"
 #  f = fairy.input(["sample/wc/data/sample_30M.txt"]*120)
 #  f = fairy.input(["sample/wc/data/sample_30M.txt"]*30)
-  f = fairy.input(["sample/wc/data/sample_30M.txt"]*10)
+#  f = fairy.input(["sample/wc/data/sample_30M.txt"]*10)
+  f = fairy.input(["sample/wc/data/fairy.cat"]*240)
   f = f.mapf(%{|ln| begin
                       ln.chomp.split
 		    rescue
